# smartmodelrouter

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/smartmodelrouter/: benchmark.py  embeddings.py  llm.py
src/smartmodelrouter/data/: coding.json  math.json  reasoning.json
tests/: test_benchmark_e2e.py  test_benchmark_integration.py  test_benchmark_unit.py  test_embeddings_e2e.py  test_embeddings_integration.py  test_embeddings_unit.py  test_llm_integration.py  test_llm_unit.py
